--- a/src/main/kotlin/org/wfanet/measurement/duchy/service/system/v1alpha/BUILD.bazel
+++ b/src/main/kotlin/org/wfanet/measurement/duchy/service/system/v1alpha/BUILD.bazel
@@ -33,13 +33,26 @@ kt_jvm_library(
     ],
     deps = [
         ":advance_computation_request_headers",
+        ":proto_conversions",
         "//src/main/kotlin/org/wfanet/measurement/common/identity",
         "//src/main/kotlin/org/wfanet/measurement/duchy/db/computation",
         "//src/main/kotlin/org/wfanet/measurement/duchy/storage:computation_store",
         "//src/main/kotlin/org/wfanet/measurement/system/v1alpha:resource_key",
         "//src/main/proto/wfa/measurement/internal/duchy:async_computation_control_service_kt_jvm_grpc_proto",
         "//src/main/proto/wfa/measurement/system/v1alpha:computation_control_service_kt_jvm_grpc_proto",
+        "//src/main/proto/wfa/measurement/system/v1alpha:computation_stage_kt_jvm_proto",
         "@wfa_common_jvm//src/main/kotlin/org/wfanet/measurement/common/grpc",
         "@wfa_common_jvm//src/main/kotlin/org/wfanet/measurement/common/identity",
+    ],
+)
+
+kt_jvm_library(
+    name = "proto_conversions",
+    srcs = [
+        "ProtoConversions.kt",
+    ],
+    deps = [
+        "//src/main/proto/wfa/measurement/internal/duchy:computation_protocols_kt_jvm_proto",
+        "//src/main/proto/wfa/measurement/system/v1alpha:computation_stage_kt_jvm_proto",
     ],
 )
