--- a/src/test/kotlin/org/wfanet/panelmatch/client/launcher/BUILD.bazel
+++ b/src/test/kotlin/org/wfanet/panelmatch/client/launcher/BUILD.bazel
@@ -1,6 +1,24 @@
 load("@wfa_rules_kotlin_jvm//kotlin:defs.bzl", "kt_jvm_test")
 
 kt_jvm_test(
+    name = "ApiClientsTest",
+    timeout = "short",
+    srcs = ["ApiClientsTest.kt"],
+    test_class = "org.wfanet.panelmatch.client.launcher.ApiClientsTest",
+    deps = [
+        "//src/main/kotlin/org/wfanet/panelmatch/client/launcher",
+        "//src/main/kotlin/org/wfanet/panelmatch/common/testing",
+        "//src/main/proto/wfa/panelmatch/client/internal:exchange_step_attempt_kt_jvm_proto",
+        "//src/main/proto/wfa/panelmatch/client/internal:exchange_workflow_kt_jvm_proto",
+        "@wfa_common_jvm//imports/java/com/google/common/truth",
+        "@wfa_common_jvm//imports/java/org/junit",
+        "@wfa_common_jvm//imports/java/org/mockito",
+        "@wfa_common_jvm//imports/kotlin/kotlin/test",
+        "@wfa_common_jvm//imports/kotlin/org/mockito/kotlin",
+    ],
+)
+
+kt_jvm_test(
     name = "ExchangeStepLauncherTest",
     timeout = "short",
     srcs = ["ExchangeStepLauncherTest.kt"],
