--- a/imports/java/com/google/cloud/bigquery/storage/BUILD.bazel
+++ b/imports/java/com/google/cloud/bigquery/storage/BUILD.bazel
@@ -1,6 +1,6 @@
 package(default_visibility = ["//visibility:public"])
 
 alias(
-    name = "bigquerystorage",
+    name = "storage",
     actual = "@maven//:com_google_cloud_google_cloud_bigquerystorage",
 )
