--- a/src/main/kotlin/org/wfanet/measurement/kingdom/deploy/gcloud/job/BUILD.bazel
+++ b/src/main/kotlin/org/wfanet/measurement/kingdom/deploy/gcloud/job/BUILD.bazel
@@ -7,10 +7,11 @@ kt_jvm_library(
     srcs = ["OperationalMetricsExportJob.kt"],
     runtime_deps = ["@wfa_common_jvm//imports/java/io/grpc/netty"],
     deps = [
-        "//imports/java/com/google/cloud/bigquerystorage",
+        ":operational_metrics_export",
+        "//imports/java/com/google/cloud/bigquery/storage",
         "//src/main/kotlin/org/wfanet/measurement/kingdom/deploy/common:duchy_ids",
         "//src/main/kotlin/org/wfanet/measurement/kingdom/deploy/common/server:utils",
-        "//src/main/kotlin/org/wfanet/measurement/kingdom/job:operational_metrics_export",
+        "//src/main/proto/wfa/measurement/internal/kingdom/bigquerytables:operational_metrics_dataset_kt_jvm_proto",
         "//src/main/proto/wfa/measurement/internal/kingdom:measurements_service_kt_jvm_grpc_proto",
         "@wfa_common_jvm//imports/java/com/google/cloud/bigquery",
         "@wfa_common_jvm//imports/java/picocli",
@@ -32,4 +33,23 @@ java_image(
     binary = ":OperationalMetricsExportJob",
     main_class = "org.wfanet.measurement.kingdom.deploy.gcloud.job.OperationalMetricsExportJobKt",
     visibility = ["//src:docker_image_deployment"],
+)
+
+kt_jvm_library(
+    name = "operational_metrics_export",
+    srcs = ["OperationalMetricsExport.kt"],
+    deps = [
+        "//imports/java/com/google/cloud/bigquery/storage",
+        "//src/main/kotlin/org/wfanet/measurement/api:public_api_version",
+        "//src/main/kotlin/org/wfanet/measurement/api/v2alpha:packed_messages",
+        "//src/main/proto/wfa/measurement/api/v2alpha:measurement_spec_kt_jvm_proto",
+        "//src/main/proto/wfa/measurement/internal/kingdom:measurements_service_kt_jvm_grpc_proto",
+        "//src/main/proto/wfa/measurement/internal/kingdom/bigquerytables:operational_metrics_dataset_kt_jvm_proto",
+        "@wfa_common_jvm//imports/java/com/google/cloud/bigquery",
+        "@wfa_common_jvm//imports/kotlin/kotlinx/coroutines:core",
+        "@wfa_common_jvm//src/main/kotlin/org/wfanet/measurement/common",
+        "@wfa_common_jvm//src/main/kotlin/org/wfanet/measurement/common/identity",
+        "@wfa_common_jvm//src/main/kotlin/org/wfanet/measurement/gcloud/common",
+    ],
+    visibility = ["//src/test/kotlin/org/wfanet/measurement/kingdom/deploy/gcloud/job:__pkg__"],
 )
