--- a/src/test/kotlin/org/wfanet/measurement/kingdom/deploy/gcloud/job/BUILD.bazel
+++ b/src/test/kotlin/org/wfanet/measurement/kingdom/deploy/gcloud/job/BUILD.bazel
@@ -4,9 +4,9 @@ kt_jvm_test(
     name = "OperationalMetricsExportTest",
     srcs = ["OperationalMetricsExportTest.kt"],
     associates = [
-        "//src/main/kotlin/org/wfanet/measurement/kingdom/job:operational_metrics_export",
+        "//src/main/kotlin/org/wfanet/measurement/kingdom/deploy/gcloud/job:operational_metrics_export",
     ],
-    test_class = "org.wfanet.measurement.kingdom.job.OperationalMetricsExportTest",
+    test_class = "org.wfanet.measurement.kingdom.deploy.gcloud.job.OperationalMetricsExportTest",
     deps = [
         "//src/main/proto/wfa/measurement/internal/kingdom:measurements_service_kt_jvm_grpc_proto",
         "@wfa_common_jvm//imports/java/com/google/common/truth",
