--- a/src/main/kotlin/org/wfanet/panelmatch/client/deploy/BUILD.bazel
+++ b/src/main/kotlin/org/wfanet/panelmatch/client/deploy/BUILD.bazel
@@ -1,4 +1,5 @@
-load("@rules_jvm_external//:defs.bzl", "java_export")
+load("@rules_jvm_external//:defs.bzl", "maven_export")
+load("@wfa_common_jvm//build/maven:defs.bzl", "artifact_version")
 load("@wfa_rules_kotlin_jvm//kotlin:defs.bzl", "kt_jvm_library")
 
 package(default_visibility = [
@@ -7,9 +8,12 @@ package(default_visibility = [
     "//src/test/kotlin/org/wfanet/panelmatch:__subpackages__",
 ])
 
+MAVEN_COORDINATES = "org.wfanet.panelmatch:panel-exchange-client-core:" + artifact_version()
+
 kt_jvm_library(
     name = "deploy",
     srcs = glob(["*.kt"]),
+    tags = ["maven_coordinates=" + MAVEN_COORDINATES],
     deps = [
         "//src/main/kotlin/org/wfanet/panelmatch/client/common",
         "//src/main/kotlin/org/wfanet/panelmatch/client/common/compression",
@@ -42,10 +46,10 @@ kt_jvm_library(
     ],
 )
 
-java_export(
+maven_export(
     name = "maven",
-    maven_coordinates = "org.wfanet:panel-exchange-client-core:$${TAG_NAME}",
-    pom_template = "//deploy:pom_template.xml",
+    lib_name = "deploy",
+    maven_coordinates = MAVEN_COORDINATES,
     tags = ["no-javadocs"],
-    runtime_deps = [":deploy"],
+    visibility = ["//visibility:private"],
 )
