--- a/src/main/kotlin/org/wfanet/measurement/kingdom/deploy/gcloud/job/BUILD.bazel
+++ b/src/main/kotlin/org/wfanet/measurement/kingdom/deploy/gcloud/job/BUILD.bazel
@@ -10,6 +10,7 @@ kt_jvm_library(
         ":operational_metrics_export",
         "//imports/java/com/google/cloud/bigquery/storage",
         "//src/main/kotlin/org/wfanet/measurement/kingdom/deploy/common/server:utils",
+        "//src/main/proto/wfa/measurement/internal/kingdom:data_providers_service_kt_jvm_grpc_proto",
         "//src/main/proto/wfa/measurement/internal/kingdom:measurements_service_kt_jvm_grpc_proto",
         "@wfa_common_jvm//imports/java/com/google/cloud/bigquery",
         "@wfa_common_jvm//imports/java/picocli",
@@ -42,6 +43,7 @@ kt_jvm_library(
         "//src/main/kotlin/org/wfanet/measurement/api:public_api_version",
         "//src/main/kotlin/org/wfanet/measurement/api/v2alpha:packed_messages",
         "//src/main/proto/wfa/measurement/api/v2alpha:measurement_spec_kt_jvm_proto",
+        "//src/main/proto/wfa/measurement/internal/kingdom:data_providers_service_kt_jvm_grpc_proto",
         "//src/main/proto/wfa/measurement/internal/kingdom:measurements_service_kt_jvm_grpc_proto",
         "//src/main/proto/wfa/measurement/internal/kingdom/bigquerytables:operational_metrics_dataset_kt_jvm_proto",
         "@wfa_common_jvm//imports/java/com/google/cloud/bigquery",
