--- a/src/test/kotlin/org/wfanet/measurement/kingdom/deploy/gcloud/job/BUILD.bazel
+++ b/src/test/kotlin/org/wfanet/measurement/kingdom/deploy/gcloud/job/BUILD.bazel
@@ -8,7 +8,7 @@ kt_jvm_test(
     ],
     test_class = "org.wfanet.measurement.kingdom.deploy.gcloud.job.OperationalMetricsExportTest",
     deps = [
-        "//imports/java/org/mockito",
+        "//src/main/proto/wfa/measurement/internal/kingdom:data_providers_service_kt_jvm_grpc_proto",
         "//src/main/proto/wfa/measurement/internal/kingdom:measurements_service_kt_jvm_grpc_proto",
         "@wfa_common_jvm//imports/java/com/google/common/truth",
         "@wfa_common_jvm//imports/java/org/junit",
