--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -139,7 +139,6 @@ bazel_dep(
 )
 bazel_dep(
     name = "cross-media-measurement-api",
-    version = "0.64.0",
     repo_name = "wfa_measurement_proto",
 )
 bazel_dep(
@@ -311,4 +310,14 @@ http_archive(
 single_version_override(
     module_name = "boringssl",
     version = BORINGSSL_VERSION,
+)
+
+# DO_NOT_SUBMIT(world-federation-of-advertisers/cross-media-measurement-api#212): Use version.
+archive_override(
+    module_name = "cross-media-measurement-api",
+    integrity = "sha256-J+9eWayDnj85oCPZA5L9/LWNvTT/Kowsf/htWSrv0Wc=",
+    strip_prefix = "cross-media-measurement-api-1af267063ba07892b1651339dce3fdf8c02c3f2f",
+    urls = [
+        "https://github.com/world-federation-of-advertisers/cross-media-measurement-api/archive/1af267063ba07892b1651339dce3fdf8c02c3f2f.tar.gz",
+    ],
 )
