--- a/.github/workflows/publish-maven-artifacts.yml
+++ b/.github/workflows/publish-maven-artifacts.yml
@@ -25,8 +25,6 @@ jobs:
   publish-artifacts:
     name: Publish Maven artifacts
     runs-on: ubuntu-22.04
-    permissions:
-      id-token: write
     steps:
       - uses: actions/checkout@v4
 
@@ -52,19 +50,19 @@ jobs:
           version: 7.1.2
           sha256: 8d5c459ab21b411b8be059a8bdf59f0d3eabf9dff943d5eccb80e36e525cc09d
 
-      # Authenticate to Google Cloud for access to remote cache.
-      - name: Authenticate to Google Cloud
-        uses: google-github-actions/auth@v2
-        with:
-          workload_identity_provider: ${{ vars.BAZEL_BUILD_WORKLOAD_IDENTITY_PROVIDER }}
-          service_account: ${{ vars.BAZEL_BUILD_SERVICE_ACCOUNT }}
-
       - name: Write ~/.bazelrc
         run: |
           cat << EOF > ~/.bazelrc
           common --config=ci
-          common --config=remote-cache
           EOF
+
+      - uses: ./.github/actions/setup-bazel-remote
+        with:
+          host: ${{ vars.BAZEL_REMOTE_CACHE_HOST }}
+          port: ${{ vars.BAZEL_REMOTE_CACHE_PORT }}
+          certificate: ${{ vars.BAZEL_REMOTE_CACHE_CERT }}
+          username: ${{ vars.BAZEL_REMOTE_CACHE_USER }}
+          password: ${{ secrets.BAZEL_REMOTE_CACHE_PASSWORD }}
 
       - name: Get Bazel cache params
         id: get-cache-params
