--- a/src/main/kotlin/org/wfanet/measurement/eventdataprovider/shareshuffle/BUILD.bazel
+++ b/src/main/kotlin/org/wfanet/measurement/eventdataprovider/shareshuffle/BUILD.bazel
@@ -26,6 +26,9 @@ maven_export(
     name = "native_maven",
     lib_name = "native",
     maven_coordinates = MAVEN_COORDINATES,
-    tags = ["no-javadocs"],
+    tags = [
+        "no-javadocs",
+        "no-remote-cache",
+    ],
     visibility = ["//visibility:private"],
 )
