--- a/src/main/kotlin/org/wfanet/measurement/eventdataprovider/shareshuffle/v2alpha/BUILD.bazel
+++ b/src/main/kotlin/org/wfanet/measurement/eventdataprovider/shareshuffle/v2alpha/BUILD.bazel
@@ -31,6 +31,9 @@ maven_export(
     name = "shareshuffle_maven",
     lib_name = "shareshuffle",
     maven_coordinates = MAVEN_COORDINATES,
-    tags = ["no-javadocs"],
+    tags = [
+        "no-javadocs",
+        "no-remote-cache",
+    ],
     visibility = ["//visibility:private"],
 )
