--- a/src/main/kotlin/org/wfanet/panelmatch/client/testing/BUILD.bazel
+++ b/src/main/kotlin/org/wfanet/panelmatch/client/testing/BUILD.bazel
@@ -46,6 +46,9 @@ maven_export(
     testonly = None,
     lib_name = "testing",
     maven_coordinates = MAVEN_COORDINATES,
-    tags = ["no-javadocs"],
+    tags = [
+        "no-javadocs",
+        "no-remote-cache",
+    ],
     visibility = ["//visibility:private"],
 )
