--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -47,18 +47,10 @@ jobs:
 
       - uses: ./.github/actions/free-disk-space
 
-      # Authenticate to Google Cloud for access to remote cache.
-      - name: Authenticate to Google Cloud
-        uses: google-github-actions/auth@v2
-        with:
-          workload_identity_provider: ${{ vars.BAZEL_BUILD_WORKLOAD_IDENTITY_PROVIDER }}
-          service_account: ${{ vars.BAZEL_BUILD_SERVICE_ACCOUNT }}
-
       - name: Write ~/.bazelrc
         run: |
           cat << EOF > ~/.bazelrc
           common --config=ci
-          common --config=remote-cache
           build --remote_upload_local_results
           build --define container_registry=localhost:5001
           build --define image_repo_prefix=halo
@@ -85,6 +77,14 @@ jobs:
           build --define bigquery_dataset=example-dataset
           build --define bigquery_table=events
           EOF
+
+      - uses: ./.github/actions/setup-bazel-remote
+        with:
+          host: ${{ vars.BAZEL_REMOTE_CACHE_HOST }}
+          port: ${{ vars.BAZEL_REMOTE_CACHE_PORT }}
+          certificate: ${{ vars.BAZEL_REMOTE_CACHE_CERT }}
+          username: ${{ vars.BAZEL_REMOTE_CACHE_USER }}
+          password: ${{ secrets.BAZEL_REMOTE_CACHE_PASSWORD }}
 
       - name: Get Bazel cache params
         id: get-cache-params
