--- a/.github/workflows/push-images.yml
+++ b/.github/workflows/push-images.yml
@@ -25,7 +25,6 @@ jobs:
   push-images:
     runs-on: ubuntu-22.04
     permissions:
-      id-token: write
       packages: write
     env:
       CONTAINER_REGISTRY: ghcr.io
@@ -33,13 +32,6 @@ jobs:
       - uses: actions/checkout@v4
 
       - uses: ./.github/actions/free-disk-space
-      
-      # Authenticate to Google Cloud for access to remote cache.
-      - name: Authenticate to Google Cloud
-        uses: google-github-actions/auth@v2
-        with:
-          workload_identity_provider: ${{ vars.BAZEL_BUILD_WORKLOAD_IDENTITY_PROVIDER }}
-          service_account: ${{ vars.BAZEL_BUILD_SERVICE_ACCOUNT }}
 
       - name: Write ~/.bazelrc
         env:
@@ -47,11 +39,18 @@ jobs:
         run: |
           cat << EOF > ~/.bazelrc
           common --config=ci
-          common --config=remote-cache
           build --define container_registry=$CONTAINER_REGISTRY
           build --define image_repo_prefix=$GITHUB_REPOSITORY_OWNER
           build --define image_tag=$IMAGE_TAG
           EOF
+
+      - uses: ./.github/actions/setup-bazel-remote
+        with:
+          host: ${{ vars.BAZEL_REMOTE_CACHE_HOST }}
+          port: ${{ vars.BAZEL_REMOTE_CACHE_PORT }}
+          certificate: ${{ vars.BAZEL_REMOTE_CACHE_CERT }}
+          username: ${{ vars.BAZEL_REMOTE_CACHE_USER }}
+          password: ${{ secrets.BAZEL_REMOTE_CACHE_PASSWORD }}
       
       - name: Get Bazel cache params
         id: get-cache-params
